--- a/pages/etudiant/details-cours.html
+++ b/pages/etudiant/details-cours.html
@@ -228,6 +228,110 @@
         </div>
     </main>
 
+    <!-- Payment Modal -->
+    <div id="payment-modal" class="fixed inset-0 z-50 hidden flex items-center justify-center">
+        <div class="absolute inset-0 bg-gray-900/60 backdrop-blur-sm transition-opacity" onclick="closePaymentModal()"></div>
+        <div class="bg-white rounded-3xl shadow-2xl w-full max-w-md mx-4 relative z-10 overflow-hidden transform transition-all scale-100">
+            <!-- Modal Header -->
+            <div class="bg-indigo-600 p-6 text-center relative">
+                <h3 class="text-white font-bold text-xl">Confirmer l'inscription</h3>
+                <p class="text-indigo-100 text-sm mt-1" id="modal-course-title">Anglais pour Débutants</p>
+                <div class="absolute top-4 right-4">
+                    <button onclick="closePaymentModal()" class="text-white/70 hover:text-white transition-colors">
+                        <i data-lucide="x" class="w-6 h-6"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Tabs -->
+            <div class="flex border-b border-gray-100">
+                <button onclick="switchPaymentTab('card')" id="tab-payment-card" class="flex-1 py-4 text-sm font-bold text-indigo-600 border-b-2 border-indigo-600 bg-indigo-50/50 transition-colors">
+                    Carte Bancaire
+                </button>
+                <button onclick="switchPaymentTab('transfer')" id="tab-payment-transfer" class="flex-1 py-4 text-sm font-bold text-gray-500 hover:text-gray-700 transition-colors">
+                    Virement / Poste
+                </button>
+            </div>
+
+            <!-- Content: Card -->
+            <div id="content-payment-card" class="p-6 space-y-4">
+                <div class="bg-blue-50 border border-blue-100 rounded-xl p-4 flex items-start gap-3">
+                    <i data-lucide="zap" class="w-5 h-5 text-blue-600 shrink-0 mt-0.5"></i>
+                    <div>
+                        <h4 class="font-bold text-blue-900 text-sm">Accès Immédiat</h4>
+                        <p class="text-xs text-blue-700 mt-1">Payez par carte et commencez à apprendre tout de suite.</p>
+                    </div>
+                </div>
+
+                <form onsubmit="handleCardPayment(event)" class="space-y-4">
+                    <div>
+                        <label class="text-xs font-bold text-gray-500 uppercase tracking-wide">Numéro de carte</label>
+                        <div class="relative mt-1">
+                            <i data-lucide="credit-card" class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-gray-400"></i>
+                            <input type="text" placeholder="0000 0000 0000 0000" class="w-full pl-10 pr-4 py-3 border border-gray-200 rounded-xl focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 outline-none transition-all font-mono" required>
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2 gap-4">
+                        <div>
+                            <label class="text-xs font-bold text-gray-500 uppercase tracking-wide">Expiration</label>
+                            <input type="text" placeholder="MM/YY" class="w-full px-4 py-3 mt-1 border border-gray-200 rounded-xl focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 outline-none transition-all font-mono" required>
+                        </div>
+                        <div>
+                            <label class="text-xs font-bold text-gray-500 uppercase tracking-wide">CVC</label>
+                            <input type="text" placeholder="123" class="w-full px-4 py-3 mt-1 border border-gray-200 rounded-xl focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 outline-none transition-all font-mono" required>
+                        </div>
+                    </div>
+                    <button type="submit" class="w-full py-3.5 bg-indigo-600 text-white rounded-xl font-bold shadow-lg shadow-indigo-200 hover:bg-indigo-700 hover:-translate-y-0.5 transition-all">
+                        Payer <span id="btn-amount-card">-- TND</span>
+                    </button>
+                    <p class="text-[10px] text-center text-gray-400 flex items-center justify-center gap-1">
+                        <i data-lucide="lock" class="w-3 h-3"></i> Paiement sécurisé par SSL
+                    </p>
+                </form>
+            </div>
+
+            <!-- Content: Transfer -->
+            <div id="content-payment-transfer" class="p-6 space-y-4 hidden">
+                 <div class="bg-amber-50 border border-amber-100 rounded-xl p-4 flex items-start gap-3">
+                    <i data-lucide="clock" class="w-5 h-5 text-amber-600 shrink-0 mt-0.5"></i>
+                    <div>
+                        <h4 class="font-bold text-amber-900 text-sm">Validation Manuelle</h4>
+                        <p class="text-xs text-amber-700 mt-1">L'accès sera débloqué après vérification du reçu par le formateur.</p>
+                    </div>
+                </div>
+
+                <div class="text-sm text-gray-600 bg-gray-50 p-4 rounded-xl space-y-2 border border-gray-100 mb-4">
+                    <p><span class="font-bold">RIB:</span> 12 345 678 9012345678 99</p>
+                    <p><span class="font-bold">Banque:</span> BIAT</p>
+                    <p><span class="font-bold">Bénéficiaire:</span> EduSpace / Ahmed Aboudi</p>
+                    <p><span class="font-bold">Motif:</span> <span id="transfer-ref">REF-COURSE</span></p>
+                </div>
+
+                <form onsubmit="handleTransferPayment(event)" class="space-y-4">
+                     <div>
+                        <label class="text-xs font-bold text-gray-500 uppercase tracking-wide">Preuve de paiement (Reçu)</label>
+                        <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-xl hover:bg-gray-50 transition-colors cursor-pointer relative">
+                            <div class="space-y-1 text-center">
+                                <i data-lucide="upload-cloud" class="mx-auto h-8 w-8 text-gray-400"></i>
+                                <div class="flex text-sm text-gray-600">
+                                    <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
+                                        <span>Télécharger un fichier</span>
+                                        <input id="file-upload" name="file-upload" type="file" class="sr-only" required onchange="updateFileName(this)">
+                                    </label>
+                                </div>
+                                <p class="text-xs text-gray-500">PNG, JPG, PDF jusqu'à 5MB</p>
+                                <p id="file-name" class="text-xs font-bold text-indigo-600 mt-2 hidden"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="w-full py-3.5 bg-gray-900 text-white rounded-xl font-bold shadow-lg shadow-gray-200 hover:bg-black hover:-translate-y-0.5 transition-all">
+                        Envoyer la demande
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <script src="../../js/core/data-manager.js"></script>
     <script src="../../js/pages/course-details.js"></script>
 </body>
