feat: implement dynamic instructor bank details configuration

--- a/pages/formateur/paiements.html
+++ b/pages/formateur/paiements.html
@@ -222,7 +222,7 @@
                                     <p class="text-sm text-slate-500">BIAT •••• 1234</p>
                                 </div>
                             </div>
-                            <button
+                            <button onclick="instructorPayments.openBankModal()"
                                 class="w-full py-2 border border-slate-200 rounded-xl text-sm font-bold text-slate-600 hover:bg-slate-50 hover:text-slate-900 transition-colors">
                                 Configurer
                             </button>
