--- a/pages/formateur/paiements.html
+++ b/pages/formateur/paiements.html
@@ -257,7 +257,7 @@
                     <i data-lucide="x" class="w-5 h-5"></i>
                 </button>
             </div>
-            <div class="p-6 space-y-4">
+            <div class="p-6 space-y-4" id="bank-config-form">
                 <div>
                     <label class="block text-xs font-bold text-slate-500 uppercase mb-1">Nom de la Banque</label>
                     <input type="text" id="config-bank-name" placeholder="Ex: BIAT, STB..." class="w-full px-4 py-2 border border-slate-200 rounded-xl focus:border-indigo-500 focus:ring-2 focus:ring-indigo-100 outline-none transition-all">
@@ -273,6 +273,15 @@
                 <button onclick="instructorPayments.saveBankDetails()" class="w-full py-3 bg-indigo-600 text-white rounded-xl font-bold shadow-lg shadow-indigo-200 hover:bg-indigo-700 transition-all">
                     Enregistrer les coordonnées
                 </button>
+            </div>
+            
+            <!-- Success View (Hidden by default) -->
+            <div id="bank-config-success" class="hidden p-8 text-center">
+                <div class="w-20 h-20 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-4 animate-bounce">
+                    <i data-lucide="check" class="w-10 h-10 text-green-600"></i>
+                </div>
+                <h4 class="text-xl font-bold text-slate-800 mb-2">Succès !</h4>
+                <p class="text-slate-500">Coordonnées enregistrées.</p>
             </div>
         </div>
     </div>
