--- a/pages/formateur/paiements.html
+++ b/pages/formateur/paiements.html
@@ -286,6 +286,38 @@
         </div>
     </div>
 
+    <!-- Receipt Viewer Modal -->
+    <div id="receipt-modal" class="fixed inset-0 z-50 hidden flex items-center justify-center">
+        <div class="absolute inset-0 bg-gray-900/80 backdrop-blur-sm transition-opacity" onclick="instructorPayments.closeReceiptModal()"></div>
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-2xl mx-4 relative z-10 overflow-hidden flex flex-col max-h-[90vh]">
+            <div class="p-4 border-b border-gray-100 flex justify-between items-center bg-gray-50">
+                <h3 class="font-bold text-lg text-slate-800 flex items-center gap-2">
+                    <i data-lucide="file-text" class="w-5 h-5 text-indigo-600"></i>
+                    Preuve de Paiement
+                </h3>
+                <button onclick="instructorPayments.closeReceiptModal()" class="text-slate-400 hover:text-slate-600 transition-colors">
+                    <i data-lucide="x" class="w-6 h-6"></i>
+                </button>
+            </div>
+            <div class="p-0 overflow-auto flex-1 bg-slate-200 flex items-center justify-center min-h-[300px]">
+                <img id="receipt-image" src="" alt="Reçu de virement" class="max-w-full max-h-full object-contain shadow-lg" />
+                <div id="receipt-error" class="hidden text-center p-8">
+                    <i data-lucide="image-off" class="w-12 h-12 text-slate-400 mx-auto mb-2"></i>
+                    <p class="text-slate-500 font-medium">Image non disponible</p>
+                </div>
+            </div>
+            <div class="p-4 border-t border-gray-100 bg-white flex justify-end gap-3">
+                <button onclick="instructorPayments.closeReceiptModal()" class="px-4 py-2 text-slate-600 font-bold hover:bg-slate-50 rounded-lg transition-colors">
+                    Fermer
+                </button>
+                <a id="receipt-download" href="#" download class="px-4 py-2 bg-indigo-600 text-white font-bold rounded-lg hover:bg-indigo-700 transition-colors flex items-center gap-2">
+                    <i data-lucide="download" class="w-4 h-4"></i>
+                    Télécharger
+                </a>
+            </div>
+        </div>
+    </div>
+
     <!-- Script Imports -->
     <script src="../../js/core/data-manager.js"></script>
     <script src="../../js/components/sidebar-formateur.js?v=2"></script>
