--- a/pages/etudiant/details-cours.html
+++ b/pages/etudiant/details-cours.html
@@ -190,11 +190,11 @@
                                 <span class="px-3 py-1 bg-red-100 text-red-600 text-xs font-bold rounded-lg">-50% OFF</span>
                             </div>
 
-                            <button onclick="buyCourse()" class="w-full py-4 bg-indigo-600 text-white rounded-xl font-bold text-lg shadow-xl shadow-indigo-200 hover:bg-indigo-700 hover:shadow-2xl hover:-translate-y-1 transition-all mb-4 flex items-center justify-center gap-2">
+                            <button id="btn-buy-course" onclick="buyCourse()" class="w-full py-4 bg-indigo-600 text-white rounded-xl font-bold text-lg shadow-xl shadow-indigo-200 hover:bg-indigo-700 hover:shadow-2xl hover:-translate-y-1 transition-all mb-4 flex items-center justify-center gap-2">
                                 <span>Acheter maintenant</span>
                                 <i data-lucide="shopping-bag" class="w-5 h-5"></i>
                             </button>
-                             <button class="w-full py-3 bg-white border-2 border-gray-100 text-gray-700 rounded-xl font-bold hover:bg-gray-50 hover:border-gray-200 transition-colors mb-6">
+                             <button id="btn-add-cart" class="w-full py-3 bg-white border-2 border-gray-100 text-gray-700 rounded-xl font-bold hover:bg-gray-50 hover:border-gray-200 transition-colors mb-6">
                                 Ajouter au panier
                             </button>
 
