--- a/pages/etudiant/profil.html
+++ b/pages/etudiant/profil.html
@@ -106,12 +106,12 @@
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-2">Prénom</label>
-                                    <input type="text" value="Ahmed"
+                                    <input type="text" id="profile-firstname" value="Ahmed"
                                         class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 transition-all">
                                 </div>
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-2">Nom</label>
-                                    <input type="text" value="Mani"
+                                    <input type="text" id="profile-lastname" value="Mani"
                                         class="w-full px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 transition-all">
                                 </div>
                                 <div>
@@ -129,7 +129,7 @@
                                     <div class="relative">
                                         <i data-lucide="phone"
                                             class="absolute left-3 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400"></i>
-                                        <input type="tel" value="+216 98 765 432"
+                                        <input type="tel" id="profile-phone" value="+216 98 765 432"
                                             class="w-full pl-10 pr-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 transition-all">
                                     </div>
                                 </div>
@@ -138,7 +138,7 @@
                                     <div class="relative">
                                         <i data-lucide="graduation-cap"
                                             class="absolute left-3 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400"></i>
-                                        <select
+                                        <select id="profile-level"
                                             class="w-full pl-10 pr-4 py-3 bg-gray-50 border border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 transition-all cursor-pointer">
                                             <option>Collège</option>
                                             <option>Seconde</option>
@@ -151,7 +151,7 @@
                             </div>
 
                             <div class="mt-6 flex justify-end">
-                                <button
+                                <button id="btn-save-profile"
                                     class="px-6 py-3 bg-blue-600 text-white font-bold rounded-xl hover:bg-blue-700 transition-all shadow-lg shadow-blue-200 flex items-center gap-2">
                                     <i data-lucide="save" class="w-4 h-4"></i>
                                     Enregistrer
