--- a/pages/formateur/class-dashboard.html
+++ b/pages/formateur/class-dashboard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../css/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
         tailwind.config = {
             theme: {
@@ -44,6 +45,7 @@
 
     <!-- Scripts -->
     <script src="../../js/core/data-manager.js"></script>
+    <script src="../../js/teacherDrive.js"></script>
     <!-- We will use a new JS file for the instructor dashboard logic -->
     <script src="../../js/pages/instructor-class-dashboard.js"></script>
 </body>
