--- a/pages/formateur/enregistre.html
+++ b/pages/formateur/enregistre.html
@@ -586,6 +586,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="../../js/main.js"></script>
     <script src="../../js/core/data-manager.js"></script>
     <script src="../../js/components/sidebar-formateur.js"></script>
     <script src="../../js/pages/dynamic-filters.js"></script>
