--- a/pages/login-parent.html
+++ b/pages/login-parent.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion Parent - EduSpace</title>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/google-auth.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -76,6 +77,22 @@
             </button>
         </form>
 
+        <!-- Divider -->
+        <div class="divider">
+            <span>OU</span>
+        </div>
+
+        <!-- Google Sign-In Button -->
+        <button type="button" class="btn-google" id="googleSignInBtn">
+            <svg class="google-logo" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+                <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+                <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+                <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+            </svg>
+            Continuer avec Google
+        </button>
+
         <div class="mt-6 text-center text-sm">
             Pas encore de compte ?
             <a href="parent/inscription.html" class="font-bold text-pink-600 hover:text-pink-500">S'inscrire</a>
@@ -83,6 +100,7 @@
     </div>
 
     <!-- Core Scripts -->
+    <script src="../js/core/google-auth.js"></script>
     <script src="../js/core/data-manager.js"></script>
     <script>
         lucide.createIcons();
@@ -93,6 +111,7 @@
             const errorDiv = document.getElementById('error-msg');
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
+            const rememberMe = document.querySelector('input[type="checkbox"]').checked;
 
             btn.disabled = true;
             btn.innerText = 'Connexion...';
@@ -102,7 +121,7 @@
                 if (!window.dataManager) await new Promise(r => setTimeout(r, 100));
                 await dataManager.init();
 
-                await dataManager.login(email, password, 'parent');
+                await dataManager.login(email, password, 'parent', rememberMe);
                 window.location.href = 'parent/dashboard.html';
 
             } catch (err) {
@@ -111,6 +130,34 @@
                 errorDiv.classList.remove('hidden');
                 btn.disabled = false;
                 btn.innerText = 'Se connecter';
+            }
+        });
+
+        // Gérer le clic sur le bouton Google
+        document.getElementById('googleSignInBtn').addEventListener('click', async function() {
+            const btn = this;
+            const errorDiv = document.getElementById('error-msg');
+            
+            btn.disabled = true;
+            btn.innerHTML = '<div class="spinner" style="width: 1.25rem; height: 1.25rem; border: 2px solid #db2777; border-top-color: transparent; border-radius: 50%; animation: spin 0.6s linear infinite;"></div> Connexion...';
+            errorDiv.classList.add('hidden');
+            
+            try {
+                await window.googleAuth.loginWithGoogle('parent');
+            } catch (error) {
+                console.error('Erreur:', error);
+                errorDiv.textContent = 'Erreur lors de la connexion avec Google';
+                errorDiv.classList.remove('hidden');
+                btn.disabled = false;
+                btn.innerHTML = `
+                    <svg class="google-logo" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+                        <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+                        <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+                        <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+                    </svg>
+                    Continuer avec Google
+                `;
             }
         });
     </script>
