--- a/pages/parent/inscription.html
+++ b/pages/parent/inscription.html
@@ -147,25 +147,25 @@
         </div>
 
         <div class="login-card">
-            <form onsubmit="event.preventDefault(); window.location.href='dashboard.html';">
+            <form id="parentInscriptionForm">
                 <div class="form-group">
                     <label class="form-label">Nom complet</label>
-                    <input type="text" class="form-input" placeholder="Votre nom" required>
+                    <input type="text" name="name" class="form-input" placeholder="Votre nom" required>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Adresse Email</label>
-                    <input type="email" class="form-input" placeholder="parent@email.com" required>
+                    <input type="email" name="email" class="form-input" placeholder="parent@email.com" required>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Numéro de téléphone</label>
-                    <input type="tel" class="form-input" placeholder="Ex: 50 123 456" required>
+                    <input type="tel" name="phone" class="form-input" placeholder="Ex: 50 123 456" required>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Mot de passe</label>
-                    <input type="password" class="form-input" placeholder="••••••••" required>
+                    <input type="password" name="password" class="form-input" placeholder="••••••••" required>
                 </div>
 
                 <button type="submit" class="btn-submit">
@@ -178,6 +178,7 @@
     </div>
     <!-- Dynamic System Scripts -->
     <script src="../../js/core/data-manager.js"></script>
+    <script src="../../js/pages/parent-inscription.js"></script>
 </body>
 
 </html>
