Force cache update (?v=2) and sync all frontend files

--- a/pages/etudiant/inscription.html
+++ b/pages/etudiant/inscription.html
@@ -201,9 +201,9 @@
         </div>
     </div>
     <!-- Dynamic System Scripts -->
-    <script src="../../js/core/google-auth.js"></script>
-    <script src="../../js/core/data-manager.js"></script>
-    <script src="../../js/pages/etudiant-inscription.js"></script>
+    <script src="../../js/core/google-auth.js?v=2"></script>
+    <script src="../../js/core/data-manager.js?v=2"></script>
+    <script src="../../js/pages/etudiant-inscription.js?v=2"></script>
     <script>
         // Gérer le clic sur le bouton Google
         document.getElementById('googleSignUpBtn').addEventListener('click', async function() {
