--- a/pages/login-entreprise.html
+++ b/pages/login-entreprise.html
@@ -388,8 +388,8 @@
     </script>
 
     <!-- Dynamic System Scripts -->
-    <script src="../js/core/google-auth.js"></script>
-    <script src="../js/core/data-manager.js"></script>
+    <script src="../js/core/google-auth.js?v=2"></script>
+    <script src="../js/core/data-manager.js?v=2"></script>
 </body>
 
 </html>
