--- a/pages/login-etudiant.html
+++ b/pages/login-etudiant.html
@@ -138,7 +138,7 @@
     </script>
 
     <!-- Google Auth Script -->
-    <script src="../js/core/google-auth.js"></script>
+    <script src="../js/core/google-auth.js?v=2"></script>
     <script>
         // Gérer le clic sur le bouton Google
         document.getElementById('googleSignInBtn').addEventListener('click', async function() {
