--- a/pages/login-parent.html
+++ b/pages/login-parent.html
@@ -100,8 +100,8 @@
     </div>
 
     <!-- Core Scripts -->
-    <script src="../js/core/google-auth.js"></script>
-    <script src="../js/core/data-manager.js"></script>
+    <script src="../js/core/google-auth.js?v=2"></script>
+    <script src="../js/core/data-manager.js?v=2"></script>
     <script>
         lucide.createIcons();
 
