--- a/pages/formateur/classes.html
+++ b/pages/formateur/classes.html
@@ -182,7 +182,7 @@
                       <div class="relative group">
                           <i data-lucide="folder" class="absolute left-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 group-focus-within:text-blue-600 transition-colors pointer-events-none"></i>
                           <select id="w-cat" class="w-full pl-12 pr-4 py-4 bg-gray-50 border border-gray-200 rounded-xl outline-none focus:bg-white focus:border-blue-500 focus:ring-4 focus:ring-blue-50 transition-all font-medium text-gray-700 appearance-none cursor-pointer">
-                              <option value="">Sélectionner une catégorie</option>
+                              <option value="">Ex: Langue</option>
                           </select>
                           <i data-lucide="chevron-down" class="absolute right-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 pointer-events-none"></i>
                       </div>
@@ -196,7 +196,7 @@
                           <div class="relative group">
                               <i data-lucide="book-open" class="absolute left-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 group-focus-within:text-emerald-600 transition-colors pointer-events-none"></i>
                               <select id="w-subject" class="w-full pl-12 pr-4 py-4 bg-gray-50 border border-gray-200 rounded-xl outline-none focus:bg-white focus:border-emerald-500 focus:ring-4 focus:ring-emerald-50 transition-all font-medium text-gray-700 appearance-none cursor-pointer">
-                                  <option value="">Sélectionner une matière</option>
+                                  <option value="">Ex: Anglais</option>
                               </select>
                               <i data-lucide="chevron-down" class="absolute right-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 pointer-events-none"></i>
                           </div>
@@ -208,7 +208,7 @@
                           <div class="relative group">
                               <i data-lucide="trending-up" class="absolute left-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 group-focus-within:text-amber-600 transition-colors pointer-events-none"></i>
                               <select id="w-lvl" class="w-full pl-12 pr-4 py-4 bg-gray-50 border border-gray-200 rounded-xl outline-none focus:bg-white focus:border-amber-500 focus:ring-4 focus:ring-amber-50 transition-all font-medium text-gray-700 appearance-none cursor-pointer">
-                                  <option value="">Sélectionner un niveau</option>
+                                  <option value="">Ex: A1.1 - Débutant</option>
                               </select>
                               <i data-lucide="chevron-down" class="absolute right-4 top-1/2 -translate-y-1/2 w-5 h-5 text-gray-400 pointer-events-none"></i>
                           </div>
