--- a/pages/etudiant/messages.html
+++ b/pages/etudiant/messages.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../../css/main.css" />
+  <link rel="stylesheet" href="../../css/messenger-style.css" />
   <script src="https://unpkg.com/lucide@latest"></script>
   <style>
     body {
