--- a/pages/parent/messages.html
+++ b/pages/parent/messages.html
@@ -7,6 +7,7 @@
     <title>Messages - EduSpace Parents</title>
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="stylesheet" href="../../css/dashboard.css">
+    <link rel="stylesheet" href="../../css/messenger-style.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
