feat: Enhanced messaging UI - Wider chat area and larger input 🎨
- Increased chat area from 2/3 to 3/4 width (grid-cols-3 → grid-cols-4)
- Enlarged input area: 100px min (was 80px), 250px max (was 200px)
- Widened message bubbles: 80% max-width (was 70%)
- Improved mobile responsive: 90% bubbles, 80px input
- Better padding and font sizes for comfortable typing
- Updated auto-resize for both student and instructor messages

--- a/pages/etudiant/messages.html
+++ b/pages/etudiant/messages.html
@@ -85,9 +85,9 @@
         </div>
       </header>
 
-      <!-- Messages Grid -->
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
-        <!-- Messages List -->
+      <!-- Messages Grid - Wider Chat Area -->
+      <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+        <!-- Messages List - Narrower -->
         <div class="lg:col-span-1 bg-white rounded-2xl border border-gray-200 shadow-sm overflow-hidden">
           <div class="p-4 border-b border-gray-200 bg-gradient-to-r from-blue-600 to-blue-700 text-white">
             <h2 class="font-bold text-lg flex items-center gap-2">
@@ -116,8 +116,8 @@
           </div>
         </div>
 
-        <!-- Message Detail -->
-        <div class="lg:col-span-2 bg-white rounded-2xl border border-gray-200 shadow-sm overflow-hidden flex flex-col"
+        <!-- Message Detail - Wider Area -->
+        <div class="lg:col-span-3 bg-white rounded-2xl border border-gray-200 shadow-sm overflow-hidden flex flex-col"
           style="height: calc(100vh - 150px);">
           <div id="message-detail-container" class="flex-1 flex items-center justify-center text-gray-400">
             <div class="text-center">
