--- a/pages/formateur/messages.html
+++ b/pages/formateur/messages.html
@@ -80,9 +80,9 @@
         </div>
       </header>
 
-      <!-- Messages Grid -->
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
-        <!-- Messages List -->
+      <!-- Messages Grid - Maximum Chat Space -->
+      <div class="grid grid-cols-1 lg:grid-cols-6 gap-6">
+        <!-- Messages List - Very Narrow -->
         <div class="lg:col-span-1 bg-white rounded-2xl border border-gray-200 shadow-sm overflow-hidden">
           <div class="p-4 border-b border-gray-200 bg-gradient-to-r from-blue-600 to-blue-700 text-white">
             <h2 class="font-bold text-lg flex items-center gap-2">
@@ -111,8 +111,8 @@
           </div>
         </div>
 
-        <!-- Message Detail -->
-        <div class="lg:col-span-2 bg-white rounded-2xl border border-gray-200 shadow-sm overflow-hidden flex flex-col"
+        <!-- Message Detail - Maximum Width -->
+        <div class="lg:col-span-5 bg-white rounded-2xl border border-gray-200 shadow-sm overflow-hidden flex flex-col"
           style="height: calc(100vh - 150px);">
           <div id="message-detail-container" class="flex-1 flex items-center justify-center text-gray-400 overflow-y-auto custom-scrollbar">
             <div class="text-center">
