--- a/pages/parent/messages.html
+++ b/pages/parent/messages.html
@@ -42,9 +42,9 @@
             <!-- Layout -->
             <div class="flex flex-col lg:flex-row gap-6 h-[calc(100vh-200px)]">
 
-                <!-- Conversations List -->
+                <!-- Conversations List - Very Narrow -->
                 <div
-                    class="w-full lg:w-1/3 bg-white rounded-2xl border border-gray-100 shadow-sm flex flex-col overflow-hidden">
+                    class="w-full lg:w-1/5 bg-white rounded-2xl border border-gray-100 shadow-sm flex flex-col overflow-hidden">
                     <div class="p-4 border-b border-gray-100">
                         <div class="relative">
                             <i data-lucide="search"
